# web_shop

./: .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_order_category_py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_category_iterator_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_exceptions_py.html  z_145eef247bfb46b6_lawn_grass_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_order_py.html  z_145eef247bfb46b6_print_mixin_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html  z_145eef247bfb46b6_utils_py.html
src/: base_order_category.py  base_product.py  category.py  category_iterator.py  config.py  exceptions.py  lawn_grass.py  main.py  order.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_category_iterator.py  test_lawn_grass.py  test_order.py  test_print_mixin.py  test_product.py  test_smartphone.py
